# mindquantum

./: .clang-format  .clangd  .cmake-format.yaml  .codespell.allow  .cppcheck.suppressions  .gitignore  .gitlab-ci.yml  .pre-commit-config-format-gitee.yml  .pre-commit-config-format.yml  .pre-commit-config-gitee.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .whitelizard.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  CPPLINT.cfg  INSTALL.md  INSTALL_cn.md  MANIFEST.in  NOTICE  README.md  README_CN.md  README_copy.md  RELEASE.md  RELEASE_CN.md  Untitled.ipynb  VERSION.txt  a.ipynb  build.bat  build.ps1  build.sh  build_binary_wheels.md  build_binary_wheels_en.md  build_locally.bat  build_locally.ps1  build_locally.sh  install_with_docker.md  install_with_docker_en.md  mindquantum_programming_experience.ipynb  (+8 more)
ccsrc/: CMakeLists.txt
ccsrc/cxx_experimental/: CMakeLists.txt  CPPLINT.cfg
ccsrc/cxx_experimental/include/: CMakeLists.txt  decompositions.hpp
ccsrc/cxx_experimental/include/cengines/: config.hpp  cpp_engine_list.hpp  cpp_graph_mapper.hpp  cpp_mapping.hpp  cpp_printer.hpp  cpp_printer.tpp  write_projectq.hpp
ccsrc/cxx_experimental/include/core/: circuit_block.hpp  circuit_block.tpp  circuit_manager.hpp  circuit_manager.tpp  compute.hpp  concepts.hpp  config.hpp  control.hpp  cpp_core.hpp  dagger.hpp  engine_concepts.hpp  gate_concepts.hpp  gate_traits.hpp  logging.hpp  operator_traits.hpp  traits.hpp  types.hpp
ccsrc/cxx_experimental/include/decompositions/: atom_meta.hpp  atom_storage.hpp  atom_storage.tpp  config.hpp  decomposition_atom.hpp  decomposition_rule.hpp  decomposition_rule.tpp  gate_decomposer.hpp  gate_decomposer.tpp  gate_decomposition_rule.hpp  non_gate_decomposition_rule.hpp  non_gate_decomposition_rule.tpp  parametric_atom.hpp  parametric_atom.tpp  trivial_atom.hpp  trivial_atom.tpp
ccsrc/cxx_experimental/include/details/: macros_conv_begin.hpp  macros_conv_end.hpp
ccsrc/cxx_experimental/include/mapping/: partial_placer.hpp
ccsrc/cxx_experimental/include/ops/: cpp_command.hpp  gates.hpp
ccsrc/cxx_experimental/include/simulator/: concepts.hpp  config.hpp  projectq_simulator.hpp  simulator_base.hpp  simulator_base.tpp
ccsrc/cxx_experimental/lib/: CMakeLists.txt
ccsrc/cxx_experimental/lib/cengines/: CMakeLists.txt  cpp_graph_mapper.cpp  cpp_printer.cpp  cpp_resource_counter.cpp  write_projectq.cpp
ccsrc/cxx_experimental/lib/core/: CMakeLists.txt  circuit_block.cpp  circuit_manager.cpp  cpp_core.cpp  logging.cpp
ccsrc/cxx_experimental/lib/decompositions/: CMakeLists.txt  atom_storage.cpp  gate_decomposer.cpp  qubit_operator2single_qubit.cpp  time_evolution.cpp
ccsrc/cxx_experimental/lib/mapping/: CMakeLists.txt  partial_placer.cpp
ccsrc/cxx_experimental/lib/ops/: CMakeLists.txt
ccsrc/cxx_experimental/lib/simulator/: CMakeLists.txt  projectq_simulator.cpp
ccsrc/cxx_experimental/python/: CMakeLists.txt
ccsrc/cxx_experimental/python/lib/: _mindquantum_cxx.cpp
ccsrc/include/: CMakeLists.txt
ccsrc/include/algorithm/qaia/: csr_base.h
ccsrc/include/config/: common_type.hpp  complex_cast.h  complex_cast.hpp  concepts.h  concepts.hpp  config.h  config.hpp  constexpr_type_name.h  constexpr_type_name.hpp  conversion.hpp  cxx20_config_gpu.hpp  detected.hpp  libc_compat.h  logging.hpp  openmp.h  openmp.hpp  popcnt.h  popcnt.hpp  real_cast.h  real_cast.hpp  tsl_ordered_map.hpp  type_promotion.h  type_promotion.hpp  type_traits.hpp
ccsrc/include/config/details/: CPPLINT.cfg  binary_operators_helpers.h  binary_operators_helpers.hpp  clang_version.hpp  cxx20_compatibility.h  cxx20_compatibility.hpp  macros.hpp
ccsrc/include/config/format/: eigen_matrices.hpp  parameter_resolver.hpp  (+5 more)
ccsrc/include/core/: mq_base_types.h  mq_base_types.hpp  numba_wrapper.h  numba_wrapper.hpp  parameter_resolver.hpp  parameter_resolver.tpp  parameter_resolver_external_ops.hpp  two_dim_matrix.hpp  utils.h  utils.hpp
ccsrc/include/device/: main.cpp  mapping.cpp  mapping.h  mapping.hpp  topology.h  topology.hpp
ccsrc/include/experimental/: CMakeLists.txt
ccsrc/include/ops/: basic_gate.h  basic_gate.hpp  gate_id.h  gate_id.hpp  gates.h  gates.hpp  hamiltonian.h  hamiltonian.hpp  projector.hpp
ccsrc/include/simulator/: CMakeLists.txt  alignedallocator.hpp  cintrin.h  timer.h  types.hpp  utils.h  utils.hpp
ccsrc/lib/: CMakeLists.txt
ccsrc/lib/algorithm/: CMakeLists.txt
ccsrc/lib/device/: CMakeLists.txt  mapping.cpp  topology.cpp
ccsrc/lib/experimental/: CMakeLists.txt
ccsrc/lib/math/: CMakeLists.txt
ccsrc/lib/mq_base/: CMakeLists.txt  libc_compat.cpp  logging.cpp  utils.cc
ccsrc/lib/simulator/: CMakeLists.txt  timer.cpp  utils.cpp
ccsrc/mq_base/: CMakeLists.txt  utils.cc
ccsrc/mq_base/core/: type.h  utils.h
ccsrc/mq_base/gate/: basic_gate.h  gates.h
ccsrc/mq_base/hamiltonian/: hamiltonian.h
ccsrc/mq_base/pr/: PRPython.h  parameter_resolver.h
ccsrc/mq_base/sparse/: algo.h  csrhdmatrix.h  paulimat.h  sparse_utils.h
ccsrc/mqbackend/: CMakeLists.txt  binding.cc
ccsrc/python/: CMakeLists.txt
ccsrc/python/algorithm/: CMakeLists.txt
ccsrc/python/core/: CMakeLists.txt
ccsrc/python/device/: CMakeLists.txt
ccsrc/python/experimental/: CMakeLists.txt
ccsrc/python/math/: CMakeLists.txt
ccsrc/python/mqbackend/: CMakeLists.txt
ccsrc/python/simulator/: CMakeLists.txt
ccsrc/test/: CMakeLists.txt  __init__.py  main.cpp  test_policy.cpp  test_python.py  test_state.cpp  verify.py  verify_policy.py  verify_policy_by_mq.py  verify_policy_by_qutip.py  verify_state.py
mindquantum/src/: CMakeLists.txt  binding.cc
mindquantum/src/backends/: CMakeLists.txt
mindquantum/src/core/: popcnt.h  type.h  utils.h
mindquantum/src/gate/: basic_gate.h  gates.h
mindquantum/src/matrix/: two_dim_matrix.h
mindquantum/src/pr/: parameter_resolver.h
mindquantum/src/sparse/: algo.h  paulimat.h
summer_ospp/2024/24c6d0467/: CMakeCache.txt  CMakeLists.txt  Makefile  README.en.md  README.md  bell.stab  chp.c  cmake_install.cmake  example  stabilizer_tableau_main.c  stabilizer_tableau_main.cpp  utils.h  唐鑫-24c6d0423-结项PPT.pptx
(+11204 files in other folders)
