[build-system]
# requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0", "setuptools_scm[toml]>=3.4"]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "backend"
backend-path = ["_build"]

# ==============================================================================

[tool.black]
    line-length = 120
    target-version = ['py36','py37','py38']
    skip-string-normalization = true


[tool.coverage]
    [tool.coverage.run]
        omit = [
            '*_test.py',
            '*_fixtures.py'
        ]


[tool.pylint]
    [tool.pylint.master]
    ignore-patterns = [
        '.*_test.py',
        '.*_fixtures.py',
    ]

    extension-pkg-whitelist = [
    ]
    extension-pkg-allow-list = [
    ]

    [tool.pylint.basic]
    good-names = []

    [tool.pylint.format]
    max-line-length = 120

    [tool.pylint.messages_control]
    disable = [
         'no-name-in-module',  # due to dynamic importing of symbols
         'fixme'
    ]


# [tool.pytest.ini_options]

# minversion = '6.0'
# addopts = '-pno:warnings'
# testpaths = ['mindquantum']
# norecursedirs = 'third_party'
# mock_use_standalone_module = true

[tool.isort]

profile = "black"


#[tool.setuptools_scm]
#write_to = 'VERSION.txt'
#write_to_template = '{version}'
#local_scheme = 'no-local-version'
#fallback_version = '0.3.0'


[tool.yapf]
column_limit = 120


[tool.cibuildwheel]

archs = ['auto64']
build-frontend = 'build'
build-verbosity = 1
skip = 'pp* *-musllinux*'
environment = { MQ_CI_BUILD='1', OMP_NUM_THREADS='1' }

before-test = [
    'cd {package}',
    'python setup.py gen_reqfile',
    'python -m pip install -r requirements.txt --only-binary :all:',
]

test-command = 'python {package}/tests/quick_test.py'

# Normal options, etc.
manylinux-x86_64-image = 'manylinux2014'

[[tool.cibuildwheel.overrides]]
select = 'cp36-*'
manylinux-x86_64-image = 'manylinux1'

[[tool.cibuildwheel.overrides]]
select = 'cp3{7,8,9}-*'
manylinux-x86_64-image = 'manylinux2010'
