[metadata]

name = mindquantum
version = file:VERSION.txt

author = The MindSpore Authors
author_email = contact@mindspore.cn

description = A hybrid quantum-classic framework for quantum computing
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8

license = Apache License Version 2.0

requires_dist = setuptools

url = https://www.mindspore.cn/
home_page = https://www.mindspore.cn/
download_url = https://gitee.com/mindspore/mindquantum/tags
project_urls =
       Download = https://gitee.com/mindspore/mindquantum/tags
       Source = https://gitee.com/mindspore/mindquantum
       Issue-Tracker = https://gitee.com/mindspore/mindquantum/issues

classifier =
       License :: OSI Approved :: Apache Software License
       Topic :: Software Development :: Libraries :: Python Modules
       Programming Language :: Python :: 3 :: Only
       Programming Language :: Python :: 3.6
       Programming Language :: Python :: 3.7
       Programming Language :: Python :: 3.8
       Programming Language :: Python :: 3.9
       Programming Language :: Python :: 3.10


[options]

zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3

install_requires =
       numpy >= 1.17.0
       scipy >= 1.5.3
       projectq >= 0.5.1
       openfermion>=1.0.0
       sympy >= 1.4
       matplotlib <= 3.4.3
       rich >= 10.9.0
       importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
console_scripts =
        mindquantum-config = mindquantum_config:main

[options.extras_require]

docs =
     sphinx
     sphinx_rtd_theme
     breathe
     myst-parser

test =
     pytest
     pytest-cov
     pytest-mock
     mock

mindspore =
         mindspore

[options.package_data]

* = *.so, *.so*, *.pyd


# ==============================================================================

[doc8]

max-line-length = 120
verbose = 0
ignore-path-errors =
    docs/api_python/mindquantum.algorithm.nisq.uccsd0_singlet_generator.rst;D001
    docs/api_python/mindquantum.algorithm.nisq.uccsd_singlet_get_packed_amplitudes.rst;D001
    docs/api_python/mindquantum.algorithm.nisq.quccsd_generator.rst;D001

# ==============================================================================

[flake8]

ignore = E203, W503, D102
per-file-ignores =
    # imported but unused / unable to detect undefined names
    __init__.py: F401, F403

max-line-length = 120
exclude =
       .git
       __pycache__
       build
       dist
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable

# ==============================================================================
