[metadata]

version = file:VERSION.txt

[options]

zip_safe = False
include_package_data = True
package_dir=
   mindquantum = mindquantum
   mindquantum-config = mindquantum_config

# ==============================================================================

[doc8]

max-line-length = 120
verbose = 0
ignore-path-errors =
    docs/api_python/mindquantum.algorithm.nisq.uccsd0_singlet_generator.rst;D001
    docs/api_python/mindquantum.algorithm.nisq.uccsd_singlet_get_packed_amplitudes.rst;D001
    docs/api_python/mindquantum.algorithm.nisq.quccsd_generator.rst;D001

# ==============================================================================

[flake8]

ignore = E203, W503, D102, D212, C092, N802, F821
per-file-ignores =
    # imported but unused / unable to detect undefined names
    __init__.py: F401, F403
    basicgate.py: C092
    channel.py: C092
    conf.py: A001
    module_circuit.py: C092
    test_uccsd.py: F401
    test_chem_net.py: F401
    CAC.py: N803
    LQA.py: N803
    QAIA.py: N803
    SFC.py: N803
    CFC.py: N803
    SimCIM.py: N803
    NMFA.py: N803
    SB.py: N803


max-line-length = 120
exclude =
       .git
       __pycache__
       build
       dist
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable

# ==============================================================================
